<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            style="@style/logoText"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:src="@drawable/logo" />

        <TextView
            style="@style/logoText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/indexTitle" />
    </LinearLayout>

    <AbsoluteLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.54" >

        <EditText
            android:id="@+id/uid"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_x="118dp"
            android:layout_y="81dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="36dp"
            android:layout_y="86dp"
            android:text="@string/uid"
            android:textColor="@color/word"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="36dp"
            android:layout_y="146dp"
            android:textColor="@color/word"
            android:text="@string/pwd" 
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_x="118dp"
            android:layout_y="140dp"
            android:password="true" />

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="184dp"
            android:layout_height="32dp"
            android:layout_x="58dp"
            android:layout_y="204dp"
            android:text="@string/cbRemember" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="48dp"
            android:layout_y="282dp"
            android:text="@string/loginButton" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="195dp"
            android:layout_y="282dp"
            android:text="@string/registerButton" />

    </AbsoluteLayout>

</LinearLayout>