<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ImageView
	    	android:layout_width="22dp"
	    	android:layout_height="fill_parent"
	    	android:src="@drawable/logo"
	    	style="@style/logoText"/>
		<TextView  
			android:id="@+id/favouriteTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:layout_height="wrap_content" 
		    android:text="@string/indexTitle"/>
	</LinearLayout>    
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/background">	    
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/jyzName"/>
		    <TextView 
		    	android:id="@+id/jyzName"
		    	android:textColor="@color/textword"
		    	android:layout_width="200dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"/>	    	
		</LinearLayout>   	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/oilUserID"/>
		    <TextView 
		    	android:id="@+id/oilTime"
		    	android:textColor="@color/textword"
		    	android:layout_width="200dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"/>
		</LinearLayout> 
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/DisStr"/>
		</LinearLayout>	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <EditText 
		    	android:id="@+id/oilDis"
		    	android:textColor="@color/textword"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:lines="3"
		    	android:enabled="false"
		    	android:scrollbars="vertical"
		    	android:textSize="18sp"/>
		</LinearLayout>		
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/oilLocation"/>
		</LinearLayout>			
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
	    	<com.google.android.maps.MapView
	   			android:id="@+id/myMapView"
	    		android:layout_width="fill_parent"
	    		android:layout_height="230dp"
	    		android:clickable="true"
	    		android:apiKey="0n04nWE17szHBWDAfznv-AgFT21SLpIwfCujf_A"
	    	/>
		</LinearLayout>	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="center"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <ImageButton
		    	android:id="@+id/favouriteButton" 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:src="@drawable/favourite_button"/>
		    <ImageButton
		    	android:id="@+id/backButton"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:src="@drawable/back_button"/>	    	
		</LinearLayout>
	</LinearLayout>			
</LinearLayout>