<?xml version="1.0" encoding="utf-8"?><!-- 澹版槑鐗堟湰鍙峰拰缂栫爜鏍煎紡 -->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"><!-- 鍨傜洿鐨勭嚎鎬у竷灞€ -->
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"><!-- 姘村钩鐨勭嚎鎬у竷灞€ -->
	    <ImageView
	    	android:layout_width="22dp"
	    	android:layout_height="fill_parent"
	    	android:src="@drawable/logo"
	    	style="@style/logoText"/><!-- 娣诲姞涓€涓狪mageView鏄剧ずLogo -->
		<TextView  
			android:id="@+id/favouriteTitle"
		    android:layout_width="fill_parent" 
		    style="@style/logoText"
		    android:layout_height="wrap_content" 
		    android:text="@string/indexTitle"/><!-- 鏍囬 -->
	</LinearLayout>    
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/background"><!-- 鍨傜洿鐨勭嚎鎬у竷灞€ -->	    
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/jyzName"/>
		    <TextView 
		    	android:id="@+id/jyzName"
		    	android:textColor="@color/textword"
		    	android:layout_width="200dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"/>	    	
		</LinearLayout>   	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/oilTime"/>
		    <TextView 
		    	android:id="@+id/oilTime"
		    	android:textColor="@color/textword"
		    	android:layout_width="200dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"/>
		</LinearLayout> 
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/DisStr"/>
		</LinearLayout>	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <EditText 
		    	android:id="@+id/oilDis"
		    	android:textColor="@color/textword"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:lines="3"
		    	android:enabled="false"
		    	android:scrollbars="vertical"
		    	android:textSize="18sp"/>
		</LinearLayout>		
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <TextView 
		    	android:layout_width="120dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="20sp"
			    android:textColor="@color/word"
		    	android:text="@string/oilLocation"/>
		</LinearLayout>			
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="left"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
	    	<com.google.android.maps.MapView
	   			android:id="@+id/myMapView"
	    		android:layout_width="fill_parent"
	    		android:layout_height="230dp"
	    		android:clickable="true"
	    		android:apiKey="0n04nWE17szHBWDAfznv-AgFT21SLpIwfCujf_A"
	    	/><!-- 娣诲姞涓€涓狹apView鐢ㄤ簬鏄剧ず鍦板浘 -->
		</LinearLayout>	
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:gravity="center"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"><!-- 娣诲姞涓€涓按骞崇殑绾挎€у竷灞€ -->
		    <ImageButton
		    	android:id="@+id/deleteButton" 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:src="@drawable/delete_button"/><!-- 娣诲姞涓€涓垹闄ゆ寜閽?-->
		    <ImageButton
		    	android:id="@+id/backButton"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:src="@drawable/back_button"/><!-- 娣诲姞涓€涓繑鍥炴寜閽?-->		    	
		</LinearLayout>
	</LinearLayout>			
</LinearLayout>